# IBM-skillsbuild-chatbot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  REFLECTION.md  index.html  main.py  pyproject.toml
src/: engine.py  models.py
tests/: __init__.py  test_chatbot.py  test_engine.py
