[project]
name = "ibm-skillsbuild-assistant"
version = "0.1.0"
description = "IBM SkillsBuild chatbot with intent-based response engine"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
